--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <div>
       <textarea id="respuesta" cols="50" rows="10"></textarea>
     </div>
+    <div id="suggested-replies">
+      
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
