conectarse con otro servidor ws

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <label for="clear-context">Olvidar Conversacion</label>
     <button id="btn-send" onclick="enviarMensaje()">Enviar</button>
     <div>
+      <div id="advertencia"></div>
       <textarea id="respuesta" cols="50" rows="10"></textarea>
     </div>
     <div id="suggested-replies">
